# yosys-fpga-json-analyzer

./: CMakeLists.txt  Cell.cpp  Cell.h  LogicCell.h  LogicalCell.cpp  LogicalCell.h  Port.cpp  Port.h  README.md  StringUtils.h  main.cc
distr/: fpga-json-parser
